# medman

./: .gitignore  Cargo.toml  README.md  bar.json  bar.md  interaction.json  playlist.pls  seriafile.md  sériafile.md  test.md
src/: cli.rs  interact.rs  lib.rs  main.rs  musicfile.rs  scan.rs  scrap.rs  search.rs  tag.rs  write2md.rs  write2playlist.rs
