[package]
name = "medman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
walkdir = "2.3.2"

markdown-gen = "1.2.1"
serde = { version = "1.0.130", features = ["derive"] }
audiotags = "0.2.7182"
serde_json = "1.0.68"